--- a/bookStore/src/main/resources/templates/bookEdit.html
+++ b/bookStore/src/main/resources/templates/bookEdit.html
@@ -38,7 +38,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item"><a class="nav-link active text-white"
-                        aria-current="page" href="/">Home</a></li>
+                        aria-current="page" href="/home">Home</a></li>
                     <li class="nav-item"><a class="nav-link text-white"
                         href="available_books">Available Books</a></li>
                     <li class="nav-item"><a class="nav-link text-white" href="my_books">My
