--- a/bookStore/src/main/resources/templates/bookRegister.html
+++ b/bookStore/src/main/resources/templates/bookRegister.html
@@ -25,35 +25,40 @@
 </head>
 <body>
 
-
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
         <div class="container-fluid">
             <a class="navbar-brand text-white" href="#">Perpustakaan</a>
-            <button class="navbar-toggler" type="button"
-                data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false"
-                aria-label="Toggle navigation">
+            
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active text-white"
-                        aria-current="page" href="/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-white"
-                        href="available_books">Available Books</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="my_books">My
-                            Books</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link active text-white" aria-current="page" href="/home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="available_books">Buku yg Tersedia</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="my_books">Buku Saya</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="datatransactions">Data Transaksi</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="book_register">Daftar Buku Baru</a>
+                    </li>
                 </ul>
                 <div>
-                    <a class="nav-link text-white" href="book_register">New Book
-                        Register</a>
+                    <a class="nav-link text-white" href="login">Logout</a>
                 </div>
             </div>
         </div>
     </nav>
 
     <div class="container my-5">
-        <div class="card mx-auto" style="width: 18rem;">
+        <div class="card mx-auto" style="width: 40rem;">
             <div class="card-header text-center card-header-custom">
                 <h4 class="text-white">New Book Register</h4>
             </div>
