--- a/bookStore/src/main/resources/templates/createTransaction.html
+++ b/bookStore/src/main/resources/templates/createTransaction.html
@@ -16,24 +16,6 @@
     </style>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
-        <div class="container-fluid">
-            <a class="navbar-brand text-white" href="#">Perpustakaan</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                    <li class="nav-item"><a class="nav-link active text-white" aria-current="page" href="/">Home</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="available_books">Available Books</a></li>
-                    <li class="nav-item"><a class="nav-link text-white" href="my_books">My Books</a></li>
-                </ul>
-                <div>
-                    <a class="nav-link text-white" href="book_register">New Book Register</a>
-                </div>
-            </div>
-        </div>
-    </nav>
 
     <div class="container my-5">
         <div class="card mx-auto" style="width: 40rem;">
@@ -75,7 +57,10 @@
                         <label for="totalPrice" class="form-label">Total Price:</label>
                         <input type="number" step="0.01" class="form-control" id="totalPrice" name="totalPrice">
                     </div>
-                    <input type="submit" class="btn btn-primary" value="Submit">
+                    <div class="d-flex justify-content-between">
+                        <input type="submit" class="btn btn-primary" value="Submit">
+                        <a href="/home" class="btn btn-secondary">Cancel</a> <!-- Button Cancel -->
+                    </div>
                 </form>
             </div>
         </div>
