--- a/bookStore/src/main/resources/templates/home.html
+++ b/bookStore/src/main/resources/templates/home.html
@@ -46,7 +46,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active text-white" aria-current="page" href="/home">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="available_books">Buku yg Tersedia</a>
@@ -57,9 +57,12 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="datatransactions">Data Transaksi</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="book_register">Daftar Buku Baru</a>
+                    </li>
                 </ul>
                 <div>
-                    <a class="nav-link text-white" href="book_register">Daftar Buku Baru</a>
+                    <a class="nav-link text-white" href="login">Logout</a>
                 </div>
             </div>
         </div>
