--- a/bookStore/src/main/resources/templates/transactionList.html
+++ b/bookStore/src/main/resources/templates/transactionList.html
@@ -35,16 +35,18 @@
     </style>
 </head>
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
         <div class="container-fluid">
             <a class="navbar-brand text-white" href="#">Perpustakaan</a>
+            
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active text-white" aria-current="page" href="/">Home</a>
+                        <a class="nav-link active text-white" aria-current="page" href="/home">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white" href="available_books">Buku yg Tersedia</a>
@@ -55,9 +57,12 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" href="datatransactions">Data Transaksi</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="book_register">Daftar Buku Baru</a>
+                    </li>
                 </ul>
                 <div>
-                    <a class="nav-link text-white" href="book_register">Daftar Buku Baru</a>
+                    <a class="nav-link text-white" href="login">Logout</a>
                 </div>
             </div>
         </div>
